fixed angular bugs, added mssql connection

--- a/ATT_Shape_Hackathon/ATT_Shape_Hackathon.web/Views/Home/Contact.cshtml
+++ b/ATT_Shape_Hackathon/ATT_Shape_Hackathon.web/Views/Home/Contact.cshtml
@@ -12,6 +12,6 @@
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:Support@att.com">Support@att.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@att.com">Marketing@att.com</a>
 </address>
