--- a/ATT_Shape_Hackathon/ATT_Shape_Hackathon.web/Views/People/Index.cshtml
+++ b/ATT_Shape_Hackathon/ATT_Shape_Hackathon.web/Views/People/Index.cshtml
@@ -158,8 +158,9 @@
         </tr>
     </script>
     <script src="~/Scripts/App/attApp.js"></script>
+    <script src="~/Scripts/App/att.js"></script>
     <script src="~/Scripts/App/Services/people.js"></script>
     <script src="~/Scripts/App/Controllers/PeopleController.js"></script>
-    <script src="~/Scripts/App/app.Services.People.js"></script>
+    <script src="~/Scripts/App/att.Services.People.js"></script>
 
 }
